--- a/Proyecto/Proyecto_MD.ipynb
+++ b/Proyecto/Proyecto_MD.ipynb
@@ -24,37 +24,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducción."
+    "### Introducción."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Definición de Problema\n",
-    "   * Dueño AIRBNB Problmea\n",
-    "   Nuestro cliente es el dueño de un AIRBNB, que no tiene información suficiente para salir a mercado con precio competitivo. \n",
-    "   El dueño se mete a la platforma y se compara propiedades similares. \n",
+    "1) **Definición de Problema**\n",
+    " \n",
+    "Nuestro cliente es el propietario de un inmueble registrado en Airbnb que enfrenta dificultades para determinar un precio competitivo en el mercado. Actualmente, el propietario accede a la plataforma para comparar su propiedad con otras similares, pero carece de la información suficiente para establecer una estrategia de precios adecuada y efectiva.\n",
     "\n",
-    "Limitación: la estimación nos dará un precio que probablemente no será explicado marginalmente.\n",
     "\n",
-    "2) Previo Flujo de la solución del problema \n",
-    "   Esta comparación se piensa automatizar dentro de un algoritmo de Machine learning. \n",
-    "   El anterior algorithmo se alimentará con una base de datos que contienen caracterisiticas distintas de propiedades dentro de la zona geografica. El flujo que será ejecutado:\n",
-    "   1) Descarga de Base de Datos\n",
-    "   2) Limpieza y exploracion de Base\n",
-    "   3) Busqueda y Programación de algoritmo.\n",
-    "   4) Estimación del precio. \n",
+    "2) **Previo Flujo de la solución del problema**\n",
     "\n",
-    "Con esta estimación le damos a nuestro cliente una muy buena idea en que será su gnancia.\n",
+    "La comparación anteriormente mencionada se planea automatizar mediante un algoritmo de aprendizaje automático (Machine Learning). Este algoritmo se nutrirá de una base de datos que contiene diversas características de propiedades ubicadas en la zona geográfica de la Ciudad de México. El flujo para llevar a cabo el análisis será el siguiente:\n",
     "\n",
-    "3) Columna Objetivo\n",
-    "   Nuestra columna objetivo será la columna de Precio.\n",
+    "1. **Descarga de la Base de Datos**\n",
+    "2. **Limpieza y Exploración de la Base de Datos**\n",
+    "3. **Desarrollo y Programación del Algoritmo**\n",
+    "4. **Estimación del Precio**\n",
     "\n",
-    "4) Definir alcances y limiataciones\n",
-    "   * Alcance: Solo será analizada la zona geografica de la Ciudad de Mexico.\n",
-    "   * Y solo las variables que estén dentro de la base ddatos definida en el siguiente.\n",
-    "   * Limitación: la estimación nos dará un precio que probablemente no será explicado marginalmente.\n",
+    "Con esta estimación, proporcionaremos a nuestro cliente una mejor visión de su posible ganancia, lo cual le permitirá tomar mejores decisiones respecto a la fijación de precios para su propiedad.\n",
+    "\n",
+    "3) **Columna Objetivo**\n",
+    "   \n",
+    "De lo anterior, se decide que la columna objetivo será la de Precio.\n",
+    "\n",
+    "4) **Definición de Alcances y Limitaciones**\n",
+    "\n",
+    "*Alcance:* \n",
+    "   * El análisis se restringirá exclusivamente a la zona geográfica de la Ciudad de México. \n",
+    "   * Se considerarán únicamente las variables contenidas en la base de datos definida para este propósito.\n",
+    "   \n",
+    "*Limitación:* \n",
+    "\n",
+    "* La estimación proporcionada por el algoritmo podría resultar en un precio que no se explicará en detalle marginalmente, lo que podría limitar la precisión y el entendimiento completo de las estimaciones generadas.\n",
     "   "
    ]
   },
@@ -62,67 +67,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Base de Datos"
+    "### Base de Datos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Fuente de la información\n",
-    "La base de datos que vamos utilizar en este trabajao proviene de: Asocición inside AIRBNB. \n",
-    "Es una plataforma independiente que proporciona datos y herramientas para el análisis de los listados de propiedades de Airbnb en diferentes ciudades del mundo. Esta plataforma recopila y publica datos de los listados de Airbnb con el propósito de aumentar la transparencia en torno al impacto de Airbnb en las comunidades locales, especialmente en términos de disponibilidad de viviendas, precios de alquiler y otras dinámicas del mercado de alquiler a corto plazo.\n",
+    "1) **Fuente de la información**\n",
     "\n",
-    "2) Lenguaje de Programación y carga de datos.\n",
-    "Lenguaje de programación R y Python. Utlizaremos archivos tipo csv para la base\n",
+    "La base de datos que vamos utilizar en este trabajo proviene de: Asocición inside AIRBNB. Esta asosiación es una plataforma independiente que proporciona datos y herramientas para el análisis de los listados de propiedades de Airbnb en diferentes ciudades del mundo. Esta plataforma recopila y publica datos de los listados de Airbnb con el propósito de aumentar la transparencia en torno al impacto de Airbnb en las comunidades locales, especialmente en términos de disponibilidad de viviendas, precios de alquiler y otras dinámicas del mercado de alquiler a corto plazo.\n",
     "\n",
-    "3) Tamaños de la base\n",
-    "La base se conforma de 26,536 registros con 75 variables. \n",
-    "\n",
-    "\n",
+    "2) **Lenguaje de Programación y carga de datos.**\n",
     "   \n",
+    "* Lenguaje de programación que se utlizarán en este trabajo serán R y Python. \n",
+    "* Para la base de datos se usarán archivos tipo csv.\n",
     "\n",
+    "3) **Tamaños de la base**\n",
     "\n",
-    "\n",
-    "\n"
+    "La base se conforma de 26,536 registros con 75 variables. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4) Vista previa de la base.\n",
-    "   Codigo #Gerry#"
+    "4) **Vista previa de la base.**\n",
+    "   \n",
+    "Codigo #Gerry#"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Ocultar lenguaje#\n",
-    "clean_list.head()\n",
+    "* Ocultar lenguaje\n",
+    "Codigo clean_list.head()\n",
     "\n",
     "Explicación lo que ve en el output de 2 renglones."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
-    "7) Tipología de los datos\n",
+    "5) **Tipología de los datos**\n",
     "\n",
     "Codigo Describe!!! #Rodrigo y Gerardo#\n",
     "\n",
@@ -140,12 +130,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exposición #2 \n",
-    "Tratamiento de los datos\n",
-    "Responsables: \n",
-    "Emanuel \n",
-    "Ulices \n",
-    "Armando\n"
+    "## Tratamiento de los datos (Para Exposición #2)\n",
+    "\n",
+    "* Responsables: \n",
+    "* Emanuel \n",
+    "* Ulices \n",
+    "* Armando\n"
    ]
   },
   {
@@ -164,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Estadistica descriptiva."
+    "## Estadistica descriptiva. (Para Exposición #2)"
    ]
   },
   {
@@ -178,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Referencias."
+    "## Referencias."
    ]
   },
   {
